force-app/main/default/objects/Account/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Account id for external object lookup</description>
    <externalId>true</externalId>
    <label>AccountId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>