force-app/main/default/objects/Account/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>