force-app/main/default/objects/Account/fields/NewCustomField__c.field-meta.xml
<CustomField>
    <fullName>NewCustomField__c</fullName>
    <label>New Custom Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>